# openclaw-oneclick-windows

./: .gitignore  Cleanup-For-GitHub.cmd  Create-Desktop-Shortcut.cmd  LICENSE  Launch-OpenClawInstaller-Isolated.cmd  Launch-OpenClawInstaller.cmd  Preflight-OpenClawInstaller.cmd  README.md  Update-App-Icon.cmd  index.html  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  DEV.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
release/: INSTALL_NOW.cmd  PUBLISH_CHECKLIST.md  QUICKSTART_CN_EN.txt  README.md  RELEASE_NOTES_v1.0.0.md  SHA256SUMS.txt  github-release-body-v1.0.0.md
scripts/: copy-bundles.cjs  create_shortcut.ps1  enter-isolated-shell.ps1  extract-openclaw-source.ps1  run-tauri.cjs  scan-secrets.ps1  start-isolated-test.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs
src-tauri/src/modules/: backup.rs  browser.rs  config.rs  donate.rs  env.rs  health.rs  installer.rs  logger.rs  mod.rs  model_catalog.rs  model_identity.rs  paths.rs  port.rs  process.rs  security.rs  shell.rs  skills.rs  state_store.rs  upgrade.rs
src/components/: Layout.tsx  LinearProgress.tsx
src/lib/: api.ts  i18n.ts  modelCatalog.ts  modelCatalogPreset.ts  types.ts
src/pages/: ExecutePage.tsx  MaintenancePage.tsx  SuccessPage.tsx  WelcomePage.tsx  WizardPage.tsx
