[package]
name = "openclaw-installer"
version = "0.2.0"
description = "OpenClaw installer and maintenance GUI for Windows"
authors = ["OpenClaw Installer Team"]
edition = "2021"
default-run = "openclaw-installer"

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
dirs = "6.0.0"
encoding_rs = "0.8.35"
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri = { version = "=2.10.2", features = ["tray-icon"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.4"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
